*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.4 ===
* Updated build files.

=== 1.0.3 ===
* Updated build scripts.
* Updated versioning subsystem.

=== 1.0.2 ===
* Added better support for temporary directory
* Added better support for resource directory
* Improved MTEST and UTEST macros

=== 1.0.1 ===
* Improved build system
* Added before() and after() test handlers for initializer

=== 1.0.0 ===
* Unit tests
* Performance tests
* Manual tests